--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "framer-motion": "^11.13.1",
     "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
