--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.4.7"
   },
   "devDependencies": {
