--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^11.13.1",
     "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
