--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "font-awesome": "^4.7.0",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
     "uuid": "^11.0.3"
